--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,3 +1,7 @@
 <h1>Index</h1>
 <h3>List of all todo items</h3>
+<% @items.each do |item| %>
+	<%= item.title %>
+	<%= item.description %></br></br>
+<% end %>
 <%= link_to 'New', :action => 'new' %>
